--- a/app/src/main/res/layout/componente_item_list.xml
+++ b/app/src/main/res/layout/componente_item_list.xml
@@ -9,7 +9,7 @@
     android:padding="10dp">
 
     <TextView
-        android:id="@+id/Lbl_IL_NombreLista"
+        android:id="@+id/Lbl_CLI_NombreLista"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -17,13 +17,13 @@
         android:textColor="@color/white"
         android:textSize="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/Btn_IL_Borrar"
+        app:layout_constraintEnd_toStartOf="@+id/Btn_CLI_Borrar"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/Btn_IL_Borrar"
+        android:id="@+id/Btn_CLI_Borrar"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginEnd="10dp"
